// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Shapes/ShapePickerPopover default 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter"
  container={null}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--paddingSmall"
    >
      <button
        className="euiLink euiLink--primary"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Shapes/ShapePickerPopover interactive 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter"
  container={null}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--paddingSmall"
    >
      <button
        className="euiLink euiLink--primary"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-2.5 -2.5 105 105\\" fill=\\"none\\" stroke=\\"black\\">
      <rect x=\\"0\\" y=\\"0\\" width=\\"100\\" height=\\"100\\"></rect>
    </svg>",
            }
          }
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Shapes/ShapePickerPopover shape selected 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter"
  container={null}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--paddingSmall"
    >
      <button
        className="euiLink euiLink--primary"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-2.5 -2.5 105 105\\" fill=\\"none\\" stroke=\\"black\\">
      <rect x=\\"0\\" y=\\"0\\" width=\\"100\\" height=\\"100\\"></rect>
    </svg>",
            }
          }
        />
      </button>
    </div>
  </div>
</div>
`;
